--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "jobly",
+    "name": "Jobly",
     "slug": "jobly",
     "version": "1.0.0",
     "orientation": "portrait",
